[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://objects/Ybot.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Checkpoint.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://2D/SettingsInGame.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/oddballz.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 8 )

[node name="Level" type="Spatial"]
script = ExtResource( 1 )

[node name="Checkpoint" parent="." groups=[
"first",
] instance=ExtResource( 4 )]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 2.5, 0, 0, 2.5 )

[node name="Ybot" parent="." groups=[
"character",
] instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16556, -3.74599 )

[node name="Tween" type="Tween" parent="."]

[node name="RepeatTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="Floor" parent="." instance=ExtResource( 3 )]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 2.5, 0, 0, -2.5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 9.33651, 10.9251 )
light_color = Color( 1, 0.12549, 0.309804, 1 )
light_energy = 0.48
shadow_enabled = true
directional_shadow_max_distance = 200.0

[node name="ShowFPS" type="Control" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="ShowFPS"]
margin_left = 1173.93
margin_top = 17.8049
margin_right = 1213.93
margin_bottom = 37.8049
custom_fonts/font = SubResource( 1 )
text = "FPS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS_counter" type="Label" parent="ShowFPS"]
margin_left = 1217.77
margin_top = 18.0514
margin_right = 1261.77
margin_bottom = 38.0514
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsInGame" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Finished" type="Control" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Finished"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0.54902, 0.992157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Finished"]
margin_left = 497.02
margin_top = 102.219
margin_right = 1353.02
margin_bottom = 170.219
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.32549, 0.0117647, 1 )
text = "You've finished the level, gj m8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Finished"]
margin_left = 230.309
margin_top = 50.9845
margin_right = 1086.31
margin_bottom = 118.985
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.870588, 0.0117647, 1 )
text = "CONGRATULATIONS!!! "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="RichTextLabel" parent="Finished"]
margin_left = 476.202
margin_top = 236.0
margin_right = 834.202
margin_bottom = 459.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Stats:
TIME ELAPSED:
TOTAL FALLS:
FALLS PER MINUTE:
SEED:"

[node name="button-back-to-menu" type="Button" parent="Finished"]
margin_left = 404.397
margin_top = 582.716
margin_right = 924.397
margin_bottom = 656.716
custom_fonts/font = SubResource( 5 )
text = "Back to MENU"
flat = true
[connection signal="pressed" from="Finished/button-back-to-menu" to="." method="_on_buttonbacktomenu_pressed"]
